--- a/site/css/default.css
+++ b/site/css/default.css
@@ -1,141 +1,87 @@
-html {
-  font-size: 62.5%;
-}
+/* @import "base.css"; */
 
 body {
-  font-size: 1.6rem;
-  color: #000;
+    font-family: sans-serif;
+    margin-top:50px;
+    padding-top: 20px;
+    margin-left:300px;
 }
 
 header {
-  border-bottom: 0.2rem solid #000;
+    padding: 12px 20px 12px 0px;
+    height: 100%;
+    width:270px;
+    position:fixed;
+    left:0;
+    top:0;
+    background:#C0DFDF;
+    color: white;
 }
 
-nav {
-  text-align: right;
+div.logo {
+    text-align: center;
+    margin-bottom: 40px;
+    margin-top: 40px;
 }
 
-nav a {
-  font-size: 1.8rem;
-  font-weight: bold;
-  color: black;
-  text-decoration: none;
-  text-transform: uppercase;
+div.logo a {
+    color: #fff;
+    font-family: times, serif;
+    font-size: 38px;
+    font-weight: light;
+    text-decoration: none;
+    width: 270px;
+}
+
+header nav {
+    display:table;
+    margin-left: 40px;
+}
+
+header nav a {
+    display:table-row;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: none;
+    text-transform: uppercase;
+    width:100%;
 }
 
 footer {
-  margin-top: 3rem;
-  padding: 1.2rem 0;
-  border-top: 0.2rem solid #000;
-  font-size: 1.2rem;
-  color: #555;
+    color: #555;
+    font-size: 12px;
+    margin-top: 30px;
+    padding: 12px 30px 12px 0px;
+    text-align: right;
 }
 
 h1 {
-  font-size: 2.4rem;
+    font-size: 24px;
 }
 
 h2 {
-  font-size: 2rem;
+    font-size: 20px;
 }
 
-article .header {
-  font-size: 1.4rem;
-  font-style: italic;
-  color: #555;
+section.header {
+    color: #555;
+    font-size: 14px;
+    font-style: italic;
+    text-align: center;
 }
 
-.logo a {
-  font-weight: bold;
-  color: #000;
-  text-decoration: none;
+div#content{
+    font-size: 14px;
+    line-height: 18px;
+    padding: 0 30px 20px 30px;
 }
 
-@media (max-width: 319px) {
-  body {
-    width: 90%;
-    margin: 0;
-    padding: 0 5%;
-  }
-  header {
-    margin: 4.2rem 0;
-  }
-  nav {
-    margin: 0 auto 3rem;
+div#content h1{
+    color: #bbb;
+    font-family: times, serif;
+    font-style: italic;
+    font-size: 46px;
     text-align: center;
-  }
-  footer {
-    text-align: center;
-  }
-  .logo {
-    text-align: center;
-    margin: 1rem auto 3rem;
-  }
-  .logo a {
-    font-size: 2.4rem;
-  }
-  nav a {
-    display: block;
-    line-height: 1.6;
-  }
 }
 
-@media (min-width: 320px) {
-  body {
-    width: 90%;
-    margin: 0;
-    padding: 0 5%;
-  }
-  header {
-    margin: 4.2rem 0;
-  }
-  nav {
-    margin: 0 auto 3rem;
-    text-align: center;
-  }
-  footer {
-    text-align: center;
-  }
-  .logo {
-    text-align: center;
-    margin: 1rem auto 3rem;
-  }
-  .logo a {
-    font-size: 2.4rem;
-  }
-  nav a {
-    display: inline;
-    margin: 0 0.6rem;
-  }
-}
-
-@media (min-width: 640px) {
-  body {
-    width: 60rem;
-    margin: 0 auto;
-    padding: 0;
-  }
-  header {
-    margin: 0 0 3rem;
-    padding: 1.2rem 0;
-  }
-  nav {
-    margin: 0;
-    text-align: right;
-  }
-  nav a {
-    margin: 0 0 0 1.2rem;
-    display: inline;
-  }
-  footer {
-    text-align: right;
-  }
-  .logo {
-    margin: 0;
-    text-align: left;
-  }
-  .logo a {
-    float: left;
-    font-size: 1.8rem;
-  }
-}
